@@ -1,4 +1,12 @@
+2002-01-27  Lauris Kaplinski  <lauris@ximian.com>
+
+	* src/bonobo/Makefile.am (INCLUDES): Remove excess -I
+
 2002-01-21  Lauris Kaplinski  <lauris@ximian.com>
+
+	* src/sp-item.c (sp_item_distance_to_svg_viewport): New method
+	(sp_item_distance_to_svg_bbox): Ditto
+	(sp_item_style_changed): Use generic distance conversion method
 
 	* src/helper/units.c: New file, ported from libgnomeprint, we collect
 	all unit management into here
